[project]
name = "cyberllm-rag"
version = "0.1.0"
description = "Production RAG pipeline for CyberLLM — an expert knowledge assistant for CyberLLM employees"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Arneesh Aima" }]

dependencies = [
    "langchain-openai",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-community",
    "langchain-text-splitters",
    "python-dotenv",
    "gradio",
    "pydantic",
    "pydantic-settings",
    "sentence-transformers>=5.4.0",
]

[project.scripts]
cyberllm-ingest = "cyberllm_rag.cli:ingest"
cyberllm-serve = "cyberllm_rag.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberllm_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
